--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -13,6 +13,8 @@ jobs:
 
   build:
     runs-on: windows-latest
+    run:
+      working-directory: ./Excel5_11_generateCSVtags/
     steps:
     - uses: actions/checkout@v3
 
@@ -20,9 +22,10 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.22.1'
-
+    - name: Install dependencies
+      run: go get .
     - name: Build
-      run: go build -v ./...
+      run: go build -v
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v
