my 3 tries on githubworkflows

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,9 +21,8 @@ jobs:
       with:
         go-version: '1.22.1'
     - name: Install dependencies
-      run: go get .
+      working-directory: ./Excel5_11_generateCSVtags
+      run: go get
     - name: Build
+      working-directory: ./Excel5_11_generateCSVtags
       run: go build -v
-
-    - name: Test
-      run: go test -v
